country-section edit

--- a/main.html
+++ b/main.html
@@ -13,32 +13,32 @@
     <section class="sport-section">
       <h2>Football</h2>
       <div class="country-section">
-        <h3>Austria</h3>
-        <div>
+        <h3 class="country-section__title">Austria</h3>
+        <div class="country-section__item">
           <img
             src="https://matchcenter.laola1.at/static/images/logos/bundesliga.svg"
           />
           <div>Bundesliga</div>
         </div>
-        <div>
+        <div class="country-section__item">
           <img
             src="https://matchcenter.laola1.at/static/images/logos/bundesliga.svg"
           />
           <div>Bundesliga</div>
         </div>
-        <div>
+        <div class="country-section__item">
           <img
             src="https://matchcenter.laola1.at/static/images/logos/bundesliga.svg"
           />
           <div>Bundesliga</div>
         </div>
-        <div>
+        <div class="country-section__item">
           <img
             src="https://matchcenter.laola1.at/static/images/logos/bundesliga.svg"
           />
           <div>Bundesliga</div>
         </div>
-        <div>
+        <div class="country-section__item">
           <img
             src="https://matchcenter.laola1.at/static/images/logos/bundesliga.svg"
           />
