Add pictures and improve country item design

--- a/index.html
+++ b/index.html
@@ -31,13 +31,14 @@
         position: absolute;
         bottom: 0;
         left: 0;
-        height: 80px;
+        right: 0;
+        height: 300px;
       }
     </style>
   </head>
   <body>
-    <iframe src="header.html" class="header"></iframe>
+    <!-- <iframe src="header.html" class="header"></iframe> -->
     <iframe src="main.html" class="main"></iframe>
-    <iframe src="footer.html" class="footer"></iframe>
+    <!-- <iframe src="footer.html" class="footer"></iframe> -->
   </body>
 </html>
