--- a/main.html
+++ b/main.html
@@ -15,33 +15,23 @@
       <div class="country-section">
         <h3 class="country-section__title">Austria</h3>
         <div class="country-section__item">
-          <img
-            src="https://matchcenter.laola1.at/static/images/logos/bundesliga.svg"
-          />
+          <img src="/images/bundesliga.svg" />
           <div>Bundesliga</div>
         </div>
         <div class="country-section__item">
-          <img
-            src="https://matchcenter.laola1.at/static/images/logos/bundesliga.svg"
-          />
+          <img src="/images/2-liga.svg" />
           <div>Bundesliga</div>
         </div>
         <div class="country-section__item">
-          <img
-            src="https://matchcenter.laola1.at/static/images/logos/bundesliga.svg"
-          />
+          <img src="/images/oefb-cup.svg" />
           <div>Bundesliga</div>
         </div>
         <div class="country-section__item">
-          <img
-            src="https://matchcenter.laola1.at/static/images/logos/bundesliga.svg"
-          />
+          <img src="/images/football.jpg" />
           <div>Bundesliga</div>
         </div>
         <div class="country-section__item">
-          <img
-            src="https://matchcenter.laola1.at/static/images/logos/bundesliga.svg"
-          />
+          <img src="/images/football.jpg" />
           <div>Bundesliga</div>
         </div>
       </div>
