--- a/main.html
+++ b/main.html
@@ -14,26 +14,28 @@
       <h2>Football</h2>
       <div class="country-section">
         <h3 class="country-section__title">Austria</h3>
-        <div class="country-section__item">
+        <div class="country-section__box">
+        <a href="#" class="country-section__item">
           <img src="/images/bundesliga.svg" />
           <div>Bundesliga</div>
-        </div>
-        <div class="country-section__item">
+        </a>
+        <a href="#" class="country-section__item">
           <img src="/images/2-liga.svg" />
           <div>Bundesliga</div>
-        </div>
-        <div class="country-section__item">
+        </a>
+        <a href="#" class="country-section__item">
           <img src="/images/oefb-cup.svg" />
           <div>Bundesliga</div>
-        </div>
-        <div class="country-section__item">
+        </a>
+        <a href="#" class="country-section__item">
           <img src="/images/football.jpg" />
           <div>Bundesliga</div>
-        </div>
-        <div class="country-section__item">
+        </a>
+        <a href="#" class="country-section__item">
           <img src="/images/football.jpg" />
           <div>Bundesliga</div>
-        </div>
+        </a>
+      </div>
       </div>
     </section>
   </body>
