fixed main page responsiveness

--- a/main.html
+++ b/main.html
@@ -13,30 +13,32 @@
     <section class="sport-section">
       <h2>Football</h2>
       <div class="country-section">
+        <div class="country-section__padding">
         <h3 class="country-section__title">Austria</h3>
         <div class="country-section__box">
           <a href="#" class="country-section__item">
-            <img src="/images/bundesliga.svg" />
+            <img src="/images/bundesliga.svg" alt="" />
             <div>Bundesliga</div>
           </a>
           <a href="#" class="country-section__item">
-            <img src="/images/2-liga.svg" />
+            <img src="/images/2-liga.svg" alt=""/>
             <div>Bundesliga</div>
           </a>
           <a href="#" class="country-section__item">
-            <img src="/images/oefb-cup.svg" />
+            <img src="/images/oefb-cup.svg" alt=""/>
             <div>Bundesliga</div>
           </a>
           <a href="#" class="country-section__item">
-            <img src="/images/football.jpg" />
+            <img src="/images/football.jpg" alt=""/>
             <div>Bundesliga</div>
           </a>
           <a href="#" class="country-section__item">
-            <img src="/images/football.jpg" />
+            <img src="/images/football.jpg" alt=""/>
             <div>Bundesliga</div>
           </a>
         </div>
       </div>
+    </div>
     </section>
   </body>
 </html>
