Edit Page2 structure & style

--- a/page2.html
+++ b/page2.html
@@ -48,29 +48,48 @@
       </div>
     </section>
 
-    <section>
-      <div>
-        <h1>Bundesliga</h1>
-        <span> 21. Round </span>
+    <section class="league">
+      <div class="league__titlebox centered round">
+        <div class="league__title">
+          <h1>Bundesliga</h1>
+          <span> 21. Round </span>
+        </div>
+        <div class="league__menu">
+          <a href="#" class="league__menuitem">
+            <img src="/images/football.jpg" alt="" />
+            <div>Gameplan</div>
+          </a>
+          <a href="#" class="league__menuitem">
+            <img src="/images/football.jpg" alt="" />
+            <div>Gameplan</div>
+          </a>
+          <a href="#" class="league__menuitem">
+            <img src="/images/football.jpg" alt="" />
+            <div>Gameplan</div>
+          </a>
+          <a href="#" class="league__menuitem">
+            <img src="/images/football.jpg" alt="" />
+            <div>Gameplan</div>
+          </a>
+        </div>
       </div>
-      <div>
-        <a href="#">
-          <img src="/images/football.jpg" alt="" />
-          <span>Gameplan</span>
-        </a>
-        <a href="#">
-          <img src="/images/football.jpg" alt="" />
-          <span>Gameplan</span>
-        </a>
-        <a href="#">
-          <img src="/images/football.jpg" alt="" />
-          <span>Gameplan</span>
-        </a>
-        <a href="#">
-          <img src="/images/football.jpg" alt="" />
-          <span>Gameplan</span>
-        </a>
-      </div>
+
+      <a href="#" class="league__item">
+        <div class="league__itemhome">
+          <img src="/images/football.jpg" />
+          <span>SV Ried</span>
+        </div>
+        <div class="league__item--red">
+          <div class="league__item--redlive">Now Live</div>
+          <div class="league__item--redbold">1:3</div>
+          <div class="league__item--redthin">(1:1, 0:2)</div>
+        </div>
+        <div class="league__itemaway">
+          <div>FK Austria Wien</div>
+          <img src="/images/football.jpg" />
+        </div>
+        <div class="arrow">></div>
+      </a>
     </section>
 
     <section class="sport-section">
