--- a/page2.html
+++ b/page2.html
@@ -44,12 +44,33 @@
             <span>SAL</span>
             <img src="" alt="" />
           </a>
+          <a href="#" class="match-picker__item">
+            <img src="" alt="" />
+            <span>ASK</span>
+            <span>Sunday</span>
+            <span>SAL</span>
+            <img src="" alt="" />
+          </a>
+          <a href="#" class="match-picker__item">
+            <img src="" alt="" />
+            <span>ASK</span>
+            <span>Sunday</span>
+            <span>SAL</span>
+            <img src="" alt="" />
+          </a>
+          <a href="#" class="match-picker__item">
+            <img src="" alt="" />
+            <span>ASK</span>
+            <span>Sunday</span>
+            <span>SAL</span>
+            <img src="" alt="" />
+          </a>
         </div>
       </div>
     </section>
 
     <section class="league">
-      <div class="league__titlebox centered round">
+      <div class="league__titlebox centered round shadow">
         <div class="league__title">
           <h1>Bundesliga</h1>
           <span> 21. Round </span>
@@ -74,19 +95,19 @@
         </div>
       </div>
 
-      <a href="#" class="league__item">
+      <a href="#" class="league__item centered round shadow">
         <div class="league__itemhome">
-          <img src="/images/football.jpg" />
+          <img src="/images/football.jpg" alt="" />
           <span>SV Ried</span>
         </div>
         <div class="league__item--red">
-          <div class="league__item--redlive">Now Live</div>
+          <div class="league__item--redlive"><span>Now Live</span></div>
           <div class="league__item--redbold">1:3</div>
           <div class="league__item--redthin">(1:1, 0:2)</div>
         </div>
         <div class="league__itemaway">
           <div>FK Austria Wien</div>
-          <img src="/images/football.jpg" />
+          <img src="/images/football.jpg" alt=""/>
         </div>
         <div class="arrow">></div>
       </a>
