Edit paths and todo list

--- a/main.html
+++ b/main.html
@@ -5,40 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="data:," />
     <meta name="description" content="" />
-    <title></title>
-    <link rel="stylesheet" href="/css/global.css" />
-    <link rel="stylesheet" href="/css/main.css" />
+    <title>Main</title>
+    <link rel="stylesheet" href="./css/global.css" />
+    <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
     <section class="sport-section">
       <h2>Football</h2>
       <div class="country-section">
         <div class="country-section__padding">
-        <h3 class="country-section__title">Austria</h3>
-        <div class="country-section__box">
-          <a href="#" class="country-section__item">
-            <img src="/images/bundesliga.svg" alt="" />
-            <div>Bundesliga</div>
-          </a>
-          <a href="#" class="country-section__item">
-            <img src="/images/2-liga.svg" alt=""/>
-            <div>Bundesliga</div>
-          </a>
-          <a href="#" class="country-section__item">
-            <img src="/images/oefb-cup.svg" alt=""/>
-            <div>Bundesliga</div>
-          </a>
-          <a href="#" class="country-section__item">
-            <img src="/images/football.jpg" alt=""/>
-            <div>Bundesliga</div>
-          </a>
-          <a href="#" class="country-section__item">
-            <img src="/images/football.jpg" alt=""/>
-            <div>Bundesliga</div>
-          </a>
+          <h3 class="country-section__title">Austria</h3>
+          <div class="country-section__box">
+            <a href="#" class="country-section__item">
+              <img src="./images/bundesliga.svg" alt="" />
+              <div>Bundesliga</div>
+            </a>
+            <a href="#" class="country-section__item">
+              <img src="./images/2-liga.svg" alt="" />
+              <div>Bundesliga</div>
+            </a>
+            <a href="#" class="country-section__item">
+              <img src="./images/oefb-cup.svg" alt="" />
+              <div>Bundesliga</div>
+            </a>
+            <a href="#" class="country-section__item">
+              <img src="./images/football.jpg" alt="" />
+              <div>Bundesliga</div>
+            </a>
+            <a href="#" class="country-section__item">
+              <img src="./images/football.jpg" alt="" />
+              <div>Bundesliga</div>
+            </a>
+          </div>
         </div>
       </div>
-    </div>
     </section>
   </body>
 </html>
