--- a/page2.html
+++ b/page2.html
@@ -6,7 +6,8 @@
     <link rel="icon" href="data:," />
     <meta name="description" content="Page 2." />
     <title>Page 2.</title>
-    <link rel="stylesheet" href="/css/page2.css" />
+    <link rel="stylesheet" href="./css/global.css" />
+    <link rel="stylesheet" href="./css/page2.css" />
   </head>
   <body>
     <section class="breadcrumbs">
@@ -77,19 +78,19 @@
         </div>
         <div class="league__menu">
           <a href="#" class="league__menuitem">
-            <img src="/images/football.jpg" alt="" />
+            <img src="./images/football.jpg" alt="" />
             <div>Gameplan</div>
           </a>
           <a href="#" class="league__menuitem">
-            <img src="/images/football.jpg" alt="" />
+            <img src="./images/football.jpg" alt="" />
             <div>Gameplan</div>
           </a>
           <a href="#" class="league__menuitem">
-            <img src="/images/football.jpg" alt="" />
+            <img src="./images/football.jpg" alt="" />
             <div>Gameplan</div>
           </a>
           <a href="#" class="league__menuitem">
-            <img src="/images/football.jpg" alt="" />
+            <img src="./images/football.jpg" alt="" />
             <div>Gameplan</div>
           </a>
         </div>
@@ -97,7 +98,7 @@
 
       <a href="#" class="league__item centered round shadow">
         <div class="league__itemhome">
-          <img src="/images/football.jpg" alt="" />
+          <img src="./images/football.jpg" alt="" />
           <span>SV Ried</span>
         </div>
         <div class="league__item--red">
@@ -107,7 +108,7 @@
         </div>
         <div class="league__itemaway">
           <div>FK Austria Wien</div>
-          <img src="/images/football.jpg" alt=""/>
+          <img src="./images/football.jpg" alt="" />
         </div>
         <div class="arrow">></div>
       </a>
@@ -119,23 +120,23 @@
         <h3 class="country-section__title">Austria</h3>
         <div class="country-section__box">
           <a href="#" class="country-section__item">
-            <img src="/images/bundesliga.svg" />
+            <img src="./images/bundesliga.svg" />
             <div>Bundesliga</div>
           </a>
           <a href="#" class="country-section__item">
-            <img src="/images/2-liga.svg" />
+            <img src="./images/2-liga.svg" />
             <div>Bundesliga</div>
           </a>
           <a href="#" class="country-section__item">
-            <img src="/images/oefb-cup.svg" />
+            <img src="./images/oefb-cup.svg" />
             <div>Bundesliga</div>
           </a>
           <a href="#" class="country-section__item">
-            <img src="/images/football.jpg" />
+            <img src="./images/football.jpg" />
             <div>Bundesliga</div>
           </a>
           <a href="#" class="country-section__item">
-            <img src="/images/football.jpg" />
+            <img src="./images/football.jpg" />
             <div>Bundesliga</div>
           </a>
         </div>
