add football png, fixed livenow text, changed font, edited league item responsivity

--- a/main.html
+++ b/main.html
@@ -29,11 +29,11 @@
               <div>Bundesliga</div>
             </a>
             <a href="#" class="country-section__item">
-              <img src="./images/football.jpg" alt="" />
+              <img src="./images/football.png" alt="" />
               <div>Bundesliga</div>
             </a>
             <a href="#" class="country-section__item">
-              <img src="./images/football.jpg" alt="" />
+              <img src="./images/football.png" alt="" />
               <div>Bundesliga</div>
             </a>
           </div>
