--- a/page2.html
+++ b/page2.html
@@ -75,31 +75,32 @@
         <div class="league__title">
           <h1>Bundesliga</h1>
           <span> 21. Round </span>
+          <!--<em class="ico-fussball"></em>-->
         </div>
         <div class="league__menu">
           <a href="#" class="league__menuitem">
-            <img src="./images/football.jpg" alt="" />
-            <div>Gameplan</div>
+            <img src="./images/football.png" alt="" />
+            <div class="league__menuitemtext">GAMEPLAN</div>
           </a>
           <a href="#" class="league__menuitem">
-            <img src="./images/football.jpg" alt="" />
-            <div>Gameplan</div>
+            <img src="./images/football.png" alt="" />
+            <div class="league__menuitemtext">LIVE-CONFERENCE</div>
           </a>
           <a href="#" class="league__menuitem">
-            <img src="./images/football.jpg" alt="" />
-            <div>Gameplan</div>
+            <img src="./images/football.png" alt="" />
+            <div class="league__menuitemtext">TABLES</div>
           </a>
           <a href="#" class="league__menuitem">
-            <img src="./images/football.jpg" alt="" />
-            <div>Gameplan</div>
+            <img src="./images/football.png" alt="" />
+            <div class="league__menuitemtext">SCORES</div>
           </a>
         </div>
       </div>
 
       <a href="#" class="league__item centered round shadow">
         <div class="league__itemhome">
-          <img src="./images/football.jpg" alt="" />
-          <span>SV Ried</span>
+          <img src="./images/football.png" alt="" />
+          <div class="league__itemhometext"></div>SV Ried</div>
         </div>
         <div class="league__item--red">
           <div class="league__item--redlive"><span>Now Live</span></div>
@@ -107,40 +108,13 @@
           <div class="league__item--redthin">(1:1, 0:2)</div>
         </div>
         <div class="league__itemaway">
-          <div>FK Austria Wien</div>
-          <img src="./images/football.jpg" alt="" />
+          <div class="league__itemawayinner">
+            <div class="league__itemawaytext">FK Austria Wien</div>
+            <img src="./images/football.png" alt="" />
+          </div>
+          <div class="arrow">></div>
         </div>
-        <div class="arrow">></div>
       </a>
-    </section>
-
-    <section class="sport-section">
-      <h2>Football</h2>
-      <div class="country-section">
-        <h3 class="country-section__title">Austria</h3>
-        <div class="country-section__box">
-          <a href="#" class="country-section__item">
-            <img src="./images/bundesliga.svg" />
-            <div>Bundesliga</div>
-          </a>
-          <a href="#" class="country-section__item">
-            <img src="./images/2-liga.svg" />
-            <div>Bundesliga</div>
-          </a>
-          <a href="#" class="country-section__item">
-            <img src="./images/oefb-cup.svg" />
-            <div>Bundesliga</div>
-          </a>
-          <a href="#" class="country-section__item">
-            <img src="./images/football.jpg" />
-            <div>Bundesliga</div>
-          </a>
-          <a href="#" class="country-section__item">
-            <img src="./images/football.jpg" />
-            <div>Bundesliga</div>
-          </a>
-        </div>
-      </div>
     </section>
   </body>
 </html>
