--- a/page2.html
+++ b/page2.html
@@ -21,7 +21,7 @@
       <div class="match-picker">
         <div class="match-picker__title centered">
           <div>20. Round</div>
-          <div>6 Games</div>
+          <div class="notbold">6 Games</div>
         </div>
         <div class="match-picker__options">
           <a href="#" class="match-picker__item">
@@ -103,7 +103,9 @@
           <div class="league__itemhometext"></div>SV Ried</div>
         </div>
         <div class="league__item--red">
-          <div class="league__item--redlive"><span>Now Live</span></div>
+          <div class="league__item--redlive">
+            <span>Kiki</span>
+          </div>
           <div class="league__item--redbold">1:3</div>
           <div class="league__item--redthin">(1:1, 0:2)</div>
         </div>
@@ -115,6 +117,50 @@
           <div class="arrow">></div>
         </div>
       </a>
+
+       <a href="#" class="league__item centered round shadow">
+        <div class="league__itemhome">
+          <img src="./images/football.png" alt="" />
+          <div class="league__itemhometext"></div>SV Ried</div>
+        </div>
+        <div class="league__item--grey">
+          <div class="league__item--greytill">
+            <span>in 21 hours</span>
+          </div>
+          <div class="league__item--greybold">Saturday, 4. March</div>
+          <div class="league__item--greytime">17:00 clock</div>
+        </div>
+        <div class="league__itemaway">
+          <div class="league__itemawayinner">
+            <div class="league__itemawaytext">FK Austria Wien</div>
+            <img src="./images/football.png" alt="" />
+          </div>
+          <div class="arrow">></div>
+        </div>
+      </a>
+
+      <a href="#" class="league__item centered round shadow">
+        <div class="league__itemhome">
+          <img src="./images/football.png" alt="" />
+          <div class="league__itemhometext"></div>SV Ried</div>
+        </div>
+        <div class="league__item--black">
+          <div class="league__item--blacktill">
+            <span>in 18 hours</span>
+          </div>
+          <div class="league__item--blackbold">1:3</div>
+          <div class="league__item--blackthin">(1:1, 0:2)</div>
+        </div>
+        <div class="league__itemaway">
+          <div class="league__itemawayinner">
+            <div class="league__itemawaytext">FK Austria Wien</div>
+            <img src="./images/football.png" alt="" />
+          </div>
+          <div class="arrow">></div>
+        </div>
+      </a>
+
+    
     </section>
   </body>
 </html>
