styled match-picker

--- a/page2.html
+++ b/page2.html
@@ -25,46 +25,60 @@
         </div>
         <div class="match-picker__options">
           <a href="#" class="match-picker__item">
-            <img src="" alt="" />
-            <span>ASK</span>
-            <span>Sunday</span>
-            <span>SAL</span>
-            <img src="" alt="" />
+            <div class="match-picker__itemcontent">
+            <img src="./images/football.png" alt="" />
+            <span>ASK</span></div>
+            <div class="match-picker--smallred">
+              <div class="match-picker--smallredlive">
+                <span>Kiki</span>
+              </div>
+              <div class="match-picker--smallredbold">1:3</div>
+            </div>
+            <div class="match-picker__itemcontent">
+            <img src="./images/football.png" alt="" />
+            <span>SAL</span></div>
           </a>
           <a href="#" class="match-picker__item">
-            <img src="" alt="" />
-            <span>ASK</span>
-            <span>Sunday</span>
-            <span>SAL</span>
-            <img src="" alt="" />
+            <div class="match-picker__itemcontent">
+            <img src="./images/football.png" alt="" />
+            <span>ASK</span></div>
+            <div class="match-picker--smallgrey">
+              <div class="match-picker--smallgreybold">
+                <span>Morning</span>
+              </div>
+              <div class="match-picker--smallgreytime">14:30 clock</div>
+            </div>
+            <div class="match-picker__itemcontent">
+            <img src="./images/football.png" alt="" />
+            <span>SAL</span></div>
           </a>
           <a href="#" class="match-picker__item">
-            <img src="" alt="" />
+             <img src="./images/football.png" alt="" />
             <span>ASK</span>
             <span>Sunday</span>
             <span>SAL</span>
-            <img src="" alt="" />
+             <img src="./images/football.png" alt="" />
           </a>
           <a href="#" class="match-picker__item">
-            <img src="" alt="" />
+             <img src="./images/football.png" alt="" />
             <span>ASK</span>
             <span>Sunday</span>
             <span>SAL</span>
-            <img src="" alt="" />
+             <img src="./images/football.png" alt="" />
           </a>
           <a href="#" class="match-picker__item">
-            <img src="" alt="" />
+             <img src="./images/football.png" alt="" />
             <span>ASK</span>
             <span>Sunday</span>
             <span>SAL</span>
-            <img src="" alt="" />
+             <img src="./images/football.png" alt="" />
           </a>
           <a href="#" class="match-picker__item">
-            <img src="" alt="" />
+             <img src="./images/football.png" alt="" />
             <span>ASK</span>
             <span>Sunday</span>
             <span>SAL</span>
-            <img src="" alt="" />
+             <img src="./images/football.png" alt="" />
           </a>
         </div>
       </div>
