--- a/page2.html
+++ b/page2.html
@@ -12,9 +12,9 @@
   <body>
     <section class="breadcrumbs">
       <a href="#">LIVE</a>
-      <div>></div>
+      <div class="breadcrumbs__arrow">></div>
       <a href="#">Football</a>
-      <div>></div>
+      <div class="breadcrumbs__arrow">></div>
       <a href="#">Austria Bundesliga</a>
     </section>
     <section>
