--- a/page3.html
+++ b/page3.html
@@ -31,7 +31,7 @@
             </div>
             <div class="match-picker--smallred">
               <div class="match-picker--smallredlive">
-                <span>Kiki</span>
+                <span class="match-picker--smallredlivespan">Live</span>
               </div>
               <div class="match-picker--smallredbold">1:3</div>
             </div>
@@ -99,7 +99,7 @@
               </div>
               <div class="picked-match--smallred">
                 <div class="picked-match--smallredlive">
-                  <span>Kiki</span>
+                  <span class="picked-match--smallredlivespan">Live</span>
                 </div>
                 <div class="picked-match--smallredbold">1:3</div>
                 <div class="picked-match--smallredthin">(1:1, 0:2)</div>
@@ -155,7 +155,7 @@
       </div>
     </section>
     <section class="info">
-      <div class="info__gameplace">
+      <div class="info__gameplace round shadow">
         <div class="info__gameplacetitle">
           <img src="./images/football.png" alt="" />
           Gameplace
@@ -165,7 +165,7 @@
           <div>Details blablabla</div>
         </div>
       </div>
-      <div class="info__box">
+      <div class="info__box round shadow">
         <div class="info__gameplacetitle">
           <img src="./images/football.png" alt="" />
           Gameplace
@@ -174,9 +174,33 @@
           <div>Details blablabla</div>
         </div>
       </div>
-      <div class="info__box"></div>
-      <div class="info__box"></div>
-      <div class="info__box"></div>
+      <div class="info__box round shadow">
+        <div class="info__gameplacetitle">
+          <img src="./images/football.png" alt="" />
+          Gameplace
+        </div>
+        <div class="info__gameplacecontent">
+          <div>Details blablabla</div>
+        </div>
+      </div>
+      <div class="info__box round shadow">
+        <div class="info__gameplacetitle">
+          <img src="./images/football.png" alt="" />
+          Gameplace
+        </div>
+        <div class="info__gameplacecontent">
+          <div>Details blablabla</div>
+        </div>
+      </div>
+      <div class="info__box round shadow">
+        <div class="info__gameplacetitle">
+          <img src="./images/football.png" alt="" />
+          Gameplace
+        </div>
+        <div class="info__gameplacecontent">
+          <div>Details blablabla</div>
+        </div>
+      </div>
     </section>
   </body>
 </html>
