--- a/page3.html
+++ b/page3.html
@@ -158,7 +158,7 @@
       <div class="info__gameplace round shadow">
         <div class="info__gameplacetitle">
           <img src="./images/football.png" alt="" />
-          Gameplace
+          <div>Gameplace</div>
         </div>
         <div class="info__gameplacecontent">
           <img src="./images/football.png" alt="" />
@@ -199,6 +199,65 @@
         </div>
         <div class="info__gameplacecontent">
           <div>Details blablabla</div>
+        </div>
+      </div>
+    </section>
+
+    <section class="previous round shadow">
+      <div class="previous__title">
+        <img src="./images/football.png" alt="" />
+        <div>Previous Encounters</div>
+      </div>
+      <div class="previous__menu">
+        <div class="previous__menuleft">Season</div>
+        <div class="previous__menuright">
+          <div>Home</div>
+          <div>Score</div>
+          <div>Away</div>
+        </div>
+      </div>
+      <div class="previous__item">
+        <div class="previous__itemleft">
+          <div>In 2 Days</div>
+          <div>League Bundesss 22/23</div>
+        </div>
+        <div class="previous__itemright">
+          <img src="./images/football.png" alt="" />
+          <div>1 : 3</div>
+          <img src="./images/football.png" alt="" />
+        </div>
+      </div>
+      <div class="previous__item">
+        <div class="previous__itemleft">
+          <div>In 2 Days</div>
+          <div>League Bundesss 22/23</div>
+        </div>
+        <div class="previous__itemright">
+          <img src="./images/football.png" alt="" />
+          <div>1 : 3</div>
+          <img src="./images/football.png" alt="" />
+        </div>
+      </div>
+      <div class="previous__item">
+        <div class="previous__itemleft">
+          <div>In 2 Days</div>
+          <div>League Bundesss 22/23</div>
+        </div>
+        <div class="previous__itemright">
+          <img src="./images/football.png" alt="" />
+          <div>1 : 3</div>
+          <img src="./images/football.png" alt="" />
+        </div>
+      </div>
+      <div class="previous__item">
+        <div class="previous__itemleft">
+          <div>In 2 Days</div>
+          <div>League Bundesss 22/23</div>
+        </div>
+        <div class="previous__itemright">
+          <img src="./images/football.png" alt="" />
+          <div>1 : 3</div>
+          <img src="./images/football.png" alt="" />
         </div>
       </div>
     </section>
