Add page 5 structure & style

--- a/page5.html
+++ b/page5.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="data:," />
-    <meta name="description" content="Page 3." />
-    <title>Page 3.</title>
+    <meta name="description" content="Page 5." />
+    <title>Page 5.</title>
     <link rel="stylesheet" href="./css/global.css" />
-    <link rel="stylesheet" href="./css/page3.css" />
+    <link rel="stylesheet" href="./css/page5.css" />
   </head>
   <body>
     <section class="breadcrumbs">
@@ -99,7 +99,7 @@
               </div>
               <div class="picked-match--smallred">
                 <div class="picked-match--smallredlive">
-                  <span class="picked-match--smallredlivespan">Live</span>
+                  <span class="picked-match--smallredlivespan">Outcome</span>
                 </div>
                 <div class="picked-match--smallredbold">1:3</div>
                 <div class="picked-match--smallredthin">(1:1, 0:2)</div>
@@ -135,7 +135,7 @@
           </div>
         </div>
         <div class="league__menu">
-          <a href="#" class="league__menuitem">
+          <a href="#" class="league__menuitem league__menuitemred">
             <img src="./images/football.png" alt="" />
             <div class="league__menuitemtext">LIVETICKER</div>
           </a>
@@ -143,7 +143,11 @@
             <img src="./images/football.png" alt="" />
             <div class="league__menuitemtext">LINEUP</div>
           </a>
-          <a href="#" class="league__menuitem league__menuitemred">
+          <a href="#" class="league__menuitem">
+            <img src="./images/football.png" alt="" />
+            <div class="league__menuitemtext">STATISTICS</div>
+          </a>
+          <a href="#" class="league__menuitem">
             <img src="./images/football.png" alt="" />
             <div class="league__menuitemtext">DETAILS</div>
           </a>
@@ -151,113 +155,6 @@
             <img src="./images/football.png" alt="" />
             <div class="league__menuitemtext">TABLES</div>
           </a>
-        </div>
-      </div>
-    </section>
-    <section class="info">
-      <div class="info__gameplace round shadow">
-        <div class="info__gameplacetitle">
-          <img src="./images/football.png" alt="" />
-          <div>Gameplace</div>
-        </div>
-        <div class="info__gameplacecontent">
-          <img src="./images/football.png" alt="" />
-          <div>Details blablabla</div>
-        </div>
-      </div>
-      <div class="info__box round shadow">
-        <div class="info__gameplacetitle">
-          <img src="./images/football.png" alt="" />
-          Gameplace
-        </div>
-        <div class="info__gameplacecontent">
-          <div>Details blablabla</div>
-        </div>
-      </div>
-      <div class="info__box round shadow">
-        <div class="info__gameplacetitle">
-          <img src="./images/football.png" alt="" />
-          Gameplace
-        </div>
-        <div class="info__gameplacecontent">
-          <div>Details blablabla</div>
-        </div>
-      </div>
-      <div class="info__box round shadow">
-        <div class="info__gameplacetitle">
-          <img src="./images/football.png" alt="" />
-          Gameplace
-        </div>
-        <div class="info__gameplacecontent">
-          <div>Details blablabla</div>
-        </div>
-      </div>
-      <div class="info__box round shadow">
-        <div class="info__gameplacetitle">
-          <img src="./images/football.png" alt="" />
-          Gameplace
-        </div>
-        <div class="info__gameplacecontent">
-          <div>Details blablabla</div>
-        </div>
-      </div>
-    </section>
-
-    <section class="previous round shadow">
-      <div class="previous__title">
-        <img src="./images/football.png" alt="" />
-        <div>Previous Encounters</div>
-      </div>
-      <div class="previous__menu">
-        <div class="previous__menuleft">Season</div>
-        <div class="previous__menuright">
-          <div>Home</div>
-          <div>Score</div>
-          <div>Away</div>
-        </div>
-      </div>
-      <div class="previous__item">
-        <div class="previous__itemleft">
-          <div>In 2 Days</div>
-          <div>League Bundesss 22/23</div>
-        </div>
-        <div class="previous__itemright">
-          <img src="./images/football.png" alt="" />
-          <div>1 : 3</div>
-          <img src="./images/football.png" alt="" />
-        </div>
-      </div>
-      <div class="previous__item">
-        <div class="previous__itemleft">
-          <div>In 2 Days</div>
-          <div>League Bundesss 22/23</div>
-        </div>
-        <div class="previous__itemright">
-          <img src="./images/football.png" alt="" />
-          <div>1 : 3</div>
-          <img src="./images/football.png" alt="" />
-        </div>
-      </div>
-      <div class="previous__item">
-        <div class="previous__itemleft">
-          <div>In 2 Days</div>
-          <div>League Bundesss 22/23</div>
-        </div>
-        <div class="previous__itemright">
-          <img src="./images/football.png" alt="" />
-          <div>1 : 3</div>
-          <img src="./images/football.png" alt="" />
-        </div>
-      </div>
-      <div class="previous__item">
-        <div class="previous__itemleft">
-          <div>In 2 Days</div>
-          <div>League Bundesss 22/23</div>
-        </div>
-        <div class="previous__itemright">
-          <img src="./images/football.png" alt="" />
-          <div>1 : 3</div>
-          <img src="./images/football.png" alt="" />
         </div>
       </div>
     </section>
