--- a/page4.html
+++ b/page4.html
@@ -123,7 +123,7 @@
           </a>
           <a href="#" class="league__menuitem">
             <img src="./images/football.png" alt="" />
-            <div class="league__menuitemtext">TABELS</div>
+            <div class="league__menuitemtext">TABLES</div>
           </a>
         </div>
       </div>
